   This makes it easy to customize the startup process by overwritting its `model_run` method.
  
 * Modified progress dialog to add and clear details while the action runs.
 
 * Default sizes for forms are calculated, avoiding the need of setting the `form_size` attribute
   on the `Admin` class.
 
 * The `OneToMany` editor can display query attributes, created with `lazy='dynamic'`.
 
 * New available actions :
 
   * Start and stop a profiler
   * Change authentication picture
 
 * New action steps :
 
   * :class:`camelot.view.action_steps.item_view.OpenTableView`
   * :class:`camelot.view.action_steps.select_file.SaveFile`
   * :class:`camelot.view.action_steps.select_file.SelectDirectory`
   * :class:`camelot.view.action_steps.select_object.SelectObjects`
   * :class:`camelot.view.action_steps.gui.SelectItem`
   * :class:`camelot.view.action_steps.gui.SelectSubclass`
   * :class:`camelot.view.action_steps.application.MainWindow`
   * :class:`camelot.view.action_steps.form_view.ToFirstForm`
   * :class:`camelot.view.action_steps.form_view.ToLastForm`
   * :class:`camelot.view.action_steps.form_view.ToNextForm`
   * :class:`camelot.view.action_steps.form_view.ToPreviousForm`
 
 * Reworked import/export action to handle tables with many columns
 
 * New database profiles api
 
 * Integer and float editors display `None` as an empty string
 
 * The `list_action` state used to determine the icon in a table view
 
 * Delayed primary key type definition in default models

 * Introduction of the :class:`camelot.admin.field_admin.FieldAdmin` class to
   allow definition of the field attributes within the entity class.

 * See :ref:`migrate-latest` for documentation on how to upgrade an 
   existing Camelot project to the latest version.
 
 * Tested with SQLAlchemy 0.8.3

Release 13.04.13
----------------

 * Uses SQLAlchemy 0.8.0
 
 * All default models migrated from Elixir to Declarative
 
 * Replacements for most of the Elixir functions that are compatible with